--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 
-primaryColor='ff474c'
-backgroundColor='#002b36'
-secondaryBackgroundColor='#586e75'
-textColor='#fafafa'
-font='sans serif'
+primaryColor="#6eb52f"
+backgroundColor="#f0f0f5"
+secondaryBackgroundColor="#e0e0ef"
+textColor="#262730"
+font="sans serif"
